--- a/angular7MoneyTransfert/src/app/app.component.html
+++ b/angular7MoneyTransfert/src/app/app.component.html
@@ -29,7 +29,13 @@
       </li>
       <li class="nav-item">
           <a class="nav-link " [routerLink]="['/login']">login</a>
-        </li>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link " [routerLink]="['/addPartenaire']">Ajouter Partenaire</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link " [routerLink]="['/addUser']">Ajouter user</a>
+  </li>
     </ul>
   </div>
 </nav>
