--- a/angular7MoneyTransfert/src/app/app.component.html
+++ b/angular7MoneyTransfert/src/app/app.component.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <!--The content below is only a placeholder and can be replaced.-->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <a class="navbar-brand" href="#">WebiTransfert</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -39,7 +39,6 @@
     </ul>
   </div>
 </nav>
-
 <router-outlet></router-outlet>
 
 </body>
