--- a/angular7MoneyTransfert/src/app/login/login.component.html
+++ b/angular7MoneyTransfert/src/app/login/login.component.html
@@ -1,21 +1,6 @@
-<h1 class="text-center text-success">
-  Please  Sign in
-</h1>
-
-<form (submit)="login($event)">
-
-  <div class="form-group">
-    <label >Username:</label>
-    <input type="text" class="form-control" name="username" required="required"  [(ngModel)]="username"  >
-  </div>
-
-  <div class="form-group">
-    <label >Password:</label>
-    <input type="password" class="form-control" name="password" required="required"   [(ngModel)]="password"   >
-  </div>
+<form (submit)="login($event)" class="login" >
+  <input type="text" placeholder="Username" name="username" required="required"  [(ngModel)]="username">
+  <input type="password" placeholder="Password" name="password" required="required"   [(ngModel)]="password">
   <div *ngIf="error" class="alert alert-danger">{{error}}</div>
-
   <button type="submit" class="btn btn-primary" >Login</button>
-
-
 </form>
