--- a/angular7MoneyTransfert/src/app/app.component.html
+++ b/angular7MoneyTransfert/src/app/app.component.html
@@ -18,7 +18,7 @@
       <li class="nav-item active">
         <a class="nav-link" [routerLink]="['']">Home <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item"  *ngIf="isAuthenticated()">
         <a class="nav-link" [routerLink]="['/partenaires']">Partenaires</a>
       </li>
       <li class="nav-item">
