--- a/angular7MoneyTransfert/src/app/add-user/add-user.component.html
+++ b/angular7MoneyTransfert/src/app/add-user/add-user.component.html
@@ -1,9 +1,10 @@
+<app-navbar></app-navbar>
 <div class="py-5">
   <div class="row">
     <div class="col-md-6 mx-auto">
       <span class="anchor" id="formLogin"></span>
 
-      <!-- form card login -->
+      <!-- form card registration -->
       <div class="card rounded-0">
         <div class="card-header">
           <h3 class="mb-0">Register</h3>
@@ -56,16 +57,6 @@
                             type="file" accept="image/*"  class="form-control rounded-0" required
                              (change)="handleFileInput($event.target.files)">
                         </div>
-                        <div class="form-group">
-                            <label for="uname1">Partenaire</label>
-                            <select [(ngModel)]="registerUserData.partenaire" name="partenaire" id="" >
-                              <option *ngFor="let p of partenaires"  value="{{p.id}}">{{p.raisonSocial}}</option>
-                            </select>
-                          </div>
-                          <div class="form-group">
-                              <label for="uname1">Compte</label>
-                              <input type="number" [(ngModel)]="registerUserData.compte" name="compte" class="form-control rounded-0" required>
-                            </div>
             <button type="button" (click)="registerUser()" class="btn btn-primary float-right">Register</button>
           </form>
         </div>
