--- a/angular7MoneyTransfert/src/app/navbar/navbar.component.html
+++ b/angular7MoneyTransfert/src/app/navbar/navbar.component.html
@@ -6,7 +6,7 @@
       <a [routerLink]="['/partenaires']">Partenaire</a>
       <ol class="sub-menu">
         <li class="menu-item"><a [routerLink]="['/addPartenaire']">Ajout</a></li>
-        <li class="menu-item"><a href="#0">Bigger Widgets</a></li>
+        <li class="menu-item"><a [routerLink]="['/UserOperations']">Operations Utilisateurs</a></li>
         <li class="menu-item"><a href="#0">Huge Widgets</a></li>
       </ol>
     </li>
