--- a/angular7MoneyTransfert/src/app/depot/depot.component.html
+++ b/angular7MoneyTransfert/src/app/depot/depot.component.html
@@ -15,6 +15,15 @@
                   <label for="uname1">Montant</label>
                   <input type="number" [(ngModel)]="montant" name="montant" class="form-control rounded-0" required>
                 </div>
+                <div class="form-group">
+                  <label for="uname1">Compte</label>
+                  <select [(ngModel)]="comptes" name="comptes" id="" >
+                    <option *ngFor="let c of idCompteData"  value="{{c.id}}">{{c.numeroCompte}}</option>
+                  </select>
+                </div>
+                <div class="form-group">
+                  <div *ngIf="errorMessage" class="alert alert-danger">{{errorMessage}}</div>
+                </div>
             <button type="button" (click)="addDepot()" class="btn btn-primary float-right">Valider</button>
           </form>
         </div>
