--- a/angular7MoneyTransfert/src/app/login/login.component.html
+++ b/angular7MoneyTransfert/src/app/login/login.component.html
@@ -42,18 +42,13 @@
 						</div>
 						<input type="password" class="form-control" placeholder="password" name="password" required="required"   [(ngModel)]="password">
 					</div>
-					<div class="row align-items-center remember">
-						<input type="checkbox">Remember Me
-					</div>
+					<div class="form-group">
+						<div *ngIf="errorMessage" class="alert alert-danger">{{errorMessage}}</div>
+					  </div>
 					<div class="form-group">
 						<input type="submit" value="Login" class="btn float-right login_btn">
 					</div>
 				</form>
-			</div>
-			<div class="card-footer">
-				<div class="d-flex justify-content-center">
-					<a href="#">Forgot your password?</a>
-				</div>
 			</div>
 		</div>
 	</div>
