--- a/angular7MoneyTransfert/src/app/partenaire/partenaire.component.html
+++ b/angular7MoneyTransfert/src/app/partenaire/partenaire.component.html
@@ -48,6 +48,15 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header scope="col"> email </th>
       <td mat-cell *matCellDef="let row" [style.color]="row.color"> {{row.email}} </td>
     </ng-container>
+     <!-- status Column -->
+     <ng-container matColumnDef="status">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header scope="col"> status </th>
+        <td mat-cell *matCellDef="let row" [style.color]="row.status"> {{row.status}} </td>
+      </ng-container>
+    <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header scope="col"> editer </th>
+      <td mat-cell *matCellDef="let row" [style.color]="row.color"><a [routerLink]="['/partenaires']"><fa-icon [icon]="faEdit" (click)="bloquerPartenaire(ninea)"></fa-icon></a></td>
+    </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;">
         </tr>
