transaction retrait modifier utilisateur

--- a/angular7MoneyTransfert/src/app/navbar/navbar.component.html
+++ b/angular7MoneyTransfert/src/app/navbar/navbar.component.html
@@ -14,8 +14,8 @@
       <a [routerLink]="['/utilisateurs']">Utilisateurs</a>
       <ol class="sub-menu">
         <li class="menu-item"><a [routerLink]="['/addUser']">Ajout</a></li>
-        <li class="menu-item"><a href="#0">BBQ kabobs</a></li>
-        <li class="menu-item"><a href="#0">Summer kabobs</a></li>
+        <li class="menu-item"><a [routerLink]="['/envoieTransaction']">Envoi</a></li>
+        <li class="menu-item"><a [routerLink]="['/retraitTransaction']">Retrait</a></li>
       </ol>
     </li>
     <li class="menu-item" >
