--- a/angular7MoneyTransfert/src/app/add-partenaire/add-partenaire.component.html
+++ b/angular7MoneyTransfert/src/app/add-partenaire/add-partenaire.component.html
@@ -25,7 +25,7 @@
                 </div>
             <div class="form-group">
               <label>Password</label>
-              <input type="password" [(ngModel)]="partenaireData.plainPassword" name="plainPassword" class="form-control rounded-0"  required>
+              <input type="text" [(ngModel)]="partenaireData.password" name="password" class="form-control rounded-0"  required>
             </div>
             <div class="form-group">
                 <label for="uname1">Email</label>
