--- a/angular7MoneyTransfert/src/app/edit-user/edit-user.component.html
+++ b/angular7MoneyTransfert/src/app/edit-user/edit-user.component.html
@@ -45,19 +45,19 @@
                         </select>
                       </div>
                       <div class="form-group">
-                          <label for="uname1">Status</label>
-                          <select [(ngModel)]="registerUserData.status" name="status" id="" >
-                            <option *ngFor="let s of statusData"  value="{{s.name}}">{{s.name}}</option>
-                          </select>
-                        </div>
-                        <div class="form-group">
+                        <label for="uname1">Compte</label>
+                        <select [(ngModel)]="registerUserData.compte" name="comptes" id="">
+                          <option *ngFor="let c of idCompteData"  value="{{c.id}}">{{c.numeroCompte}}</option>
+                        </select>
+                      </div>
+                       <!-- <div class="form-group">
                           <label for="">Photo</label>
                           <img [src]="imageUrl" alt="" style="width:200px; height:200px;">
-                          <input #imageName
+                          <input #imageName [(ngModel)]="registerUserData.imageName" name="image"
                             type="file" accept="image/*"  class="form-control rounded-0" required
                              (change)="handleFileInput($event.target.files)">
-                        </div>
-            <button type="button" (click)="registerUser()" class="btn btn-primary float-right">Register</button>
+                        </div>-->
+            <button type="button" (click)="editUser()" class="btn btn-primary float-right">Register</button>
           </form>
         </div>
         <!--/card-block-->
