--- a/angular7MoneyTransfert/src/app/users/users.component.html
+++ b/angular7MoneyTransfert/src/app/users/users.component.html
@@ -42,13 +42,26 @@
         <!-- Color Column -->
         <ng-container matColumnDef="status">
           <th mat-header-cell *matHeaderCellDef mat-sort-header scope="col"> Status </th>
-          <td mat-cell *matCellDef="let row" [style.color]="row.color"> {{row.status}} </td>
+          <td mat-cell *matCellDef="let row" [style.color]="row.color">
+              <span *ngIf="row.status=='debloqué'">
+                  <button mat-raised-button color="accent" (click)="bloquerUser(row)">Débloqué</button>
+              </span>
+              <span *ngIf="row.status=='bloqué'">
+                  <button mat-raised-button color="warn" (click)="bloquerUser(row)">Bloqué</button>
+              </span>
+          </td>
         </ng-container>
     <!-- Color Column -->
     <ng-container matColumnDef="photo">
       <th mat-header-cell *matHeaderCellDef mat-sort-header scope="col"> Photo </th>
       <td mat-cell *matCellDef="let row" [style.color]="row.color"> {{row.photo}} </td>
     </ng-container>
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header scope="col"> editer </th>
+    <td mat-cell *matCellDef="let row" [style.color]="row.color">
+        <a routerLink="/editUser/{{row.id}}"><fa-icon [icon]="faEdit"></fa-icon></a>
+    </td>
+  </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;">
         </tr>
