--- a/angular7MoneyTransfert/src/app/navbar/navbar.component.html
+++ b/angular7MoneyTransfert/src/app/navbar/navbar.component.html
@@ -1,29 +1,25 @@
 <nav class="menu">
   <ol>
-    <li class="menu-item"><a [routerLink]="['']">Home</a></li>
-    <li class="menu-item"><a [routerLink]="['/about']">About</a></li>
-    <li class="menu-item" *ngIf="isAuthenticated()">
+    <li class="menu-item"><a [routerLink]="['/home']">Home</a></li>
+    <li class="menu-item" *ngIf="isAdmin()">
       <a [routerLink]="['/partenaires']">Partenaire</a>
       <ol class="sub-menu">
         <li class="menu-item"><a [routerLink]="['/addPartenaire']">Ajout</a></li>
-        <li class="menu-item"><a [routerLink]="['/UserOperations']">Operations Utilisateurs</a></li>
-        <li class="menu-item"><a href="#0">Huge Widgets</a></li>
       </ol>
     </li>
-    <li class="menu-item" *ngIf="isAdmin()">
-      <a [routerLink]="['/utilisateurs']">Utilisateurs</a>
+    <li class="menu-item" *ngIf="isPartenaireOrUser()">
+      <a [routerLink]="['/utilisateurs']" >Utilisateurs</a>
       <ol class="sub-menu">
-        <li class="menu-item"><a [routerLink]="['/addUser']">Ajout</a></li>
-        <li class="menu-item"><a [routerLink]="['/envoieTransaction']">Envoi</a></li>
-        <li class="menu-item"><a [routerLink]="['/retraitTransaction']">Retrait</a></li>
+        <li class="menu-item" *ngIf="isAdminPartenaire()"><a [routerLink]="['/addUser']">Ajout</a></li>
+        <li class="menu-item" *ngIf="isUserPart()"><a [routerLink]="['/envoiTransaction']">Envoi</a></li>
+        <li class="menu-item" *ngIf="isUserPart()"><a [routerLink]="['/retraitTransaction']">Retrait</a></li>
+        <li class="menu-item" *ngIf="isAdminPartenaire()"><a [routerLink]="['/UserOperations']">Operations Utilisateurs</a></li>
       </ol>
     </li>
-    <li class="menu-item" >
+    <li class="menu-item" *ngIf="isAdminPartenaireOrCaissier()">
       <a [routerLink]="['/compte']">Comptes</a>
       <ol class="sub-menu">
-        <li class="menu-item"><a [routerLink]="['/AddCompte']">Ajout compte</a></li>
         <li class="menu-item" *ngIf="isCaissier()"><a [routerLink]="['/depot']">Dépot</a></li>
-        <li class="menu-item" ><a href="#0">Summer kabobs</a></li>
       </ol>
     </li>
     <li class="menu-item"><a href="#0">Contact</a></li>
