--- a/angular7MoneyTransfert/src/app/partenaire/partenaire.component.html
+++ b/angular7MoneyTransfert/src/app/partenaire/partenaire.component.html
@@ -63,7 +63,7 @@
       </ng-container>
     <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef mat-sort-header scope="col"> editer </th>
-      <td mat-cell *matCellDef="let row" [style.color]="row.color"><a [routerLink]="['/partenaires']"><fa-icon [icon]="faEdit"></fa-icon></a></td>
+      <td mat-cell *matCellDef="let row" [style.color]="row.color"><a routerLink="/editPartenaire/{{row.id}}"><fa-icon [icon]="faEdit"></fa-icon></a></td>
     </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;">
